--- a/app/src/main/res/layout/single_saleitem.xml
+++ b/app/src/main/res/layout/single_saleitem.xml
@@ -22,6 +22,7 @@
             android:layout_height="match_parent"
             android:layout_margin="2dp">
             <ImageView
+                android:id="@+id/ivImg"
                 android:layout_width="100dp"
                 android:layout_height="80dp"
                 android:layout_margin="10dp">
@@ -33,6 +34,7 @@
                 android:layout_weight="3"
                 android:orientation="vertical">
                 <TextView
+                    android:id="@+id/tvName"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
@@ -43,6 +45,7 @@
                     android:ellipsize="end"
                     android:singleLine="true"/>
                 <TextView
+                    android:id="@+id/tvPrice"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
@@ -53,6 +56,7 @@
                     android:ellipsize="end"
                     android:singleLine="true"/>
                 <TextView
+                    android:id="@+id/tvPlus"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
